--- a/.gitignore
+++ b/.gitignore
@@ -66,4 +66,8 @@ yarn-debug.log*
 /storage/*
 !/storage/.keep
 
-# End of https://www.gitignore.io/api/rails
+# End of https://www.gitignore.io/api/rails/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
